# paranoiascape

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  psx_crash.txt  psxrecomp_update_analysis.md  run_ghidra.bat.lnk
paranoiascape-recomp/: .gitignore  CHANGELOG.md  README.md  diag_pad.py  diag_state.py  extract_videos.py  play_game.py  verify_tmd.py
paranoiascape-recomp/recompiler/: CMakeLists.txt
paranoiascape-recomp/recompiler/include/: code_generator.h
paranoiascape-recomp/recompiler/src/: code_generator.cpp  function_analysis.cpp  main_psx.cpp  mips_decoder.cpp
paranoiascape-recomp/runner/: CMakeLists.stub.txt  CMakeLists.txt
paranoiascape-recomp/runner/assets/: keyconfig.ini
paranoiascape-recomp/runner/assets/scripts/: new_game.txt  press_start.txt
paranoiascape-recomp/runner/include/: automation.h  cd_audio.h  cdrom_controller.h  cdrom_stub.h  crc32.h  game_extras.h  gpu_renderer.h  iso_reader.h  opengl_renderer.h  overlay_detector.h  overlay_manager.h  psx_runtime.h  savestate.h  xa_audio.h
paranoiascape-recomp/runner/lib/glad/include/glad/: glad.h
paranoiascape-recomp/runner/lib/glad/src/: glad.c
paranoiascape-recomp/runner/src/: cd_audio.cpp  cdrom_stub.cpp  diag_log.h  extras.cpp  fmv_player.cpp  fmv_player.h  gpu_interpreter.cpp  gte.cpp  input_script.cpp  iso_reader.cpp  launcher.cpp  main_runner.cpp  opengl_renderer.cpp  overlay_detector.cpp  overlay_manager.cpp  runtime.c  savestate.cpp  spu.cpp  spu.h  stub_runner.cpp  xa_audio.cpp
scratch/: test_play_flipper.py
wiki/: README.md  _index.md  config.md  fmv-bypass-title-screen.md  input-automation-sio.md  log.md  paranoiascape-boot-sequence.md  paranoiascape-input-graphics.md  paranoiascape-irq-chain-and-cd-spin.md  paranoiascape-state-machine-update.md  psyz-psycross-analysis.md  recompiler-stack-leak-and-vblank-pump-fix.md  stage1-loading-and-rendering.md  title-screen-snapshot-bug.md  white-area-bug.md
wiki/output/: _index.md
wiki/raw/: _index.md
wiki/raw/articles/: _index.md
wiki/raw/data/: _index.md
wiki/raw/notes/: _index.md  pcsx-redux-overview.md  psxrecomp-debug-client.md  psxrecomp-docs-ingestion.md  psxrecomp-principles.md  psycross-overview.md  psyz-porting-guide-raw.md  recompone-overview.md
wiki/raw/papers/: _index.md
wiki/raw/repos/: _index.md
wiki/wiki/: _index.md
(+29 files in other folders)
